@@ -28,7 +28,7 @@ class CollectionUtilsTests {
         value.put("Hello", CollectionUtils.wrapList("People", "World"));
         val result = CollectionUtils.toCollection(value, ArrayList.class);
         assertEquals(1, result.size());
-        assertSame(ImmutablePair.class, result.get(0).getClass());
+        assertSame(ImmutablePair.class, result.getFirst().getClass());
     }
 
     @Test
