@@ -187,7 +187,7 @@ public class OAuth20IntrospectionEndpointController<T extends OAuth20Configurati
 
             val grant = authentication.getAttributes().getOrDefault(OAuth20Constants.GRANT_TYPE, new ArrayList<>(0));
             if (!grant.isEmpty()) {
-                introspect.setGrantType(grant.get(0).toString().toLowerCase(Locale.ENGLISH));
+                introspect.setGrantType(grant.getFirst().toString().toLowerCase(Locale.ENGLISH));
             }
         } else {
             introspect.setActive(false);
